fix: Add extra margin when animating collapsed folders, b=no-bug, c=folders

--- a/src/zen/folders/zen-folders.css
+++ b/src/zen/folders/zen-folders.css
@@ -208,7 +208,7 @@ zen-folder {
     margin: var(--tab-block-margin) auto !important;
   }
 
-  &:not([collapsed]) > .tab-group-container {
+  & > .tab-group-container {
     padding-top: var(--tab-block-margin);
     padding-left: var(--zen-folder-indent, 0.5em);
 
